src/objects/FieloPLT__Member__c.object
<CustomObject>
    <fields>
        <fullName>F_Level__c</fullName>
        <formula>FieloPLT__CurrentLevelMember__r.FieloPLT__Level__r.Name</formula>
        <label>Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <description>Rebate</description>
        <label>Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesGoal__c</fullName>
        <label>Sales Goal By Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>